--- a/config.toml
+++ b/config.toml
@@ -23,3 +23,5 @@ enableRobotsTXT = true
   [markup.goldmark]
     [markup.goldmark.renderer]
       unsafe = true
+[params.assets]
+  css = ["css/extended/custom.css"]
